kubernetes/taller-kubernetes-main/publicaciones-local/0namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: publicaciones-system
  labels:
    name: publicaciones-system
